# PII-Proxy

./: .gitignore  .mise.toml  README.md  docker-compose.yml  envoy.yaml  nginx.conf
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
dummy-server/: Dockerfile  app.py
ext_proc/: .gitignore  Dockerfile  app.py  pyproject.toml
ext_proc/scripts/: gen_protos.sh
ext_proc/scrubber/: __init__.py  scrubber.py
ext_proc/tests/: test_request_scrubbing.py  test_scrubber.py
helm/pii-proxy/: Chart.yaml  README.md  values.yaml
helm/pii-proxy/templates/: NOTES.txt  _helpers.tpl  configmap-envoy.yaml  deployment.yaml  istio-resources.yaml  service.yaml
helm/pii-proxy/templates/tests/: test-scrubbing-outgoing.yaml  test-scrubbing.yaml
specs/001-k8s-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-k8s-deployment/checklists/: requirements.md
specs/001-k8s-deployment/contracts/: values-schema.md
specs/002-langfuse-outgoing-proxy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-langfuse-outgoing-proxy/checklists/: requirements.md
specs/002-langfuse-outgoing-proxy/contracts/: istio-resources.md  langfuse-mock-api.md  values-schema.md
test-fixtures/certs/: gen-certs.sh
test-fixtures/langfuse-client/: Dockerfile  requirements.txt  send_traces.py
test-fixtures/mock-langfuse/: app.py
tests/: test_envoy_echo.py
